--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,13 @@
-<% if @post.pattern == false %>
-  <%= render "posts/partials/show_post_card" %>
-  <%= @post.content %>
-<% else  %>
-  <%= render 'patterns/partials/pattern_card', post: @post, user: @user %>
-  <%= render 'patterns/partials/pattern_content', post: @post, user: @user %>
-<% end %>
+<div class="row mx-auto" style="width: 100vw;">
+  <% if @post.pattern == false %>
+    <%= render "posts/partials/show_post_card" %>
+  <% else  %>
+    <%= render 'patterns/partials/pattern_card', post: @post, user: @user %>
+    <%= render 'patterns/partials/pattern_content', post: @post, user: @user %>
+  <% end %>
 
 
-<%= turbo_frame_tag "comments" do %>
-  <%= render partial: "shared/comments", locals: { comments: @post.comments, post: @post } %>
-<% end %>
+  <%= turbo_frame_tag "comments" do %>
+    <%= render partial: "shared/comments", locals: { comments: @post.comments, post: @post } %>
+  <% end %>
+</div>
