--- a/app/views/posts/partials/_post_footer.html.erb
+++ b/app/views/posts/partials/_post_footer.html.erb
@@ -4,13 +4,13 @@
     <% if post.favorites.where(user: current_user).exists? %>
       <%= link_to '', toggle_favorites_path(post_id: post.id),
             data: { turbo_method: 'post', turbo_confirm: 'Are you sure?' },
-            class: 'fas fa-bookmark mx-2 text-body text-decoration-none',
-            style: 'margin-top: -0.16rem;' %>
+            class: 'fas fa-bookmark mx-2 text-decoration-none',
+            style: 'font-size: 1.2rem;' %>
     <% else %>
       <%= link_to '', toggle_favorites_path(post_id: post.id),
             data: { turbo_method: 'post' },
-            class: 'far fa-bookmark mx-2 text-body text-decoration-none',
-            style: 'margin-top: -0.16rem;' %>
+            class: 'far fa-bookmark mx-2 text-decoration-none',
+            style: 'font-size: 1.2rem;' %>
     <% end %>
   </div>
   <% if post.pattern? %>
@@ -22,13 +22,13 @@
     <% if post.post_likes.where(user: current_user).exists? %>
       <%= link_to '', toggle_post_post_likes_path(post),
             data: { turbo_method: 'post' },
-            class: 'fas fa-heart mx-2 fa-xs text-body text-decoration-none',
-            style: 'margin-top: -0.16rem;' %>
+            class: 'fas fa-heart text-decoration-none px-2',
+            style: 'font-size: 1.25rem; cursor: pointer;' %>
     <% else %>
       <%= link_to '', toggle_post_post_likes_path(post),
             data: { turbo_method: 'post' },
-            class: 'far fa-heart mx-2 fa-xs text-body text-decoration-none',
-            style: 'margin-top: -0.16rem;' %>
+            class: 'far fa-heart text-decoration-none px-2',
+            style: 'font-size: 1.25rem; cursor: pointer;' %>
     <% end %>
     <p class="small text-muted mb-0"><%= post.post_likes.count %></p>
   </div>
