--- a/app/views/users/partials/_my_profile_footer.html.erb
+++ b/app/views/users/partials/_my_profile_footer.html.erb
@@ -1,38 +1,8 @@
-<div class="d-flex align-items-center">
+<div class="post-actions d-flex align-items-center">
   <% if post.user_id == current_user.id %>
-      <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary" %>
+      <%= link_to "Edit", edit_post_path(post), class: "btn btn-primary btn-sm" %>
       <%= form_with(url: post_path(post), method: :delete, data: { turbo: "true", confirm: "Are you sure you want to delete this post?" }) do |form| %>
-        <%= form.submit "Delete", data: { turbo_action: "replace" }, class: "btn btn-primary" %>
+        <%= form.submit "Delete", data: { turbo_action: "replace" }, class: "btn btn-primary btn-sm ms-2" %>
       <% end %>
   <% end %>
-</div>
-  <div data-controller="favorites" data-favorites-id-value="<%= post.id %>">
-    <% if post.favorites.where(user: current_user).exists? %>
-      <i class="fa-solid fa-bookmark mx-2 fa-xs text-body" data-action="click->favorites#toggleFavorite"></i>
-    <% else %>
-      <i class="fa-regular fa-bookmark mx-2 fa-xs text-body" data-action="click->favorites#toggleFavorite"></i>
-    <% end %>
-  </div>
-
-  <div id="post-<%= post.id %>-likes" class="d-flex align-items-center ms-3">
-    <% if post.post_likes.where(user: current_user).exists? %>
-      <%= link_to toggle_post_post_likes_path(post),
-            data: { turbo_method: 'post' },
-            style: 'margin-top: -0.16rem;' do %>
-        <i class="fas fa-heart mx-2 fa-xs text-body"></i>
-      <% end %>
-    <% else %>
-      <%= link_to toggle_post_post_likes_path(post),
-            data: { turbo_method: 'post' },
-            style: 'margin-top: -0.16rem;' do %>
-            <i class="far fa-heart mx-2 fa-xs text-body text-decoration-none"></i>
-       <% end %>
-    <% end %>
-    <p class="small text-muted mb-0"><%= post.post_likes.count %></p>
-  </div>
-
-  <div class="ms-3 p-2 bd-highlight">
-    <i class="far fa-comment mx-2 fa-xs text-body text-decoration-none"></i>
-  </div>
-
 </div>
