added styles for the logged in user's profile

--- a/app/views/users/partials/_profile_header.html.erb
+++ b/app/views/users/partials/_profile_header.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container pb-4 border-bottom">
   <div style="display: flex; align-items: center;">
     <% if @user.avatar.attached? %>
       <%= image_tag @user.avatar,  class: "rounded-circle me-3", style: "width: 100px; height: 100px;" %>
@@ -16,6 +16,27 @@
           <span>Following <strong><%= @user.followees.count %></strong></span>
         <% end %>
       </span>
+
+      <% if @user.bio.present? %>
+        <p class="fs-6 text-muted text-left mt-2"><%= @user.bio %></p>
+      <% end %>
     </div>
   </div>
+
+  <% if @user != current_user %>
+    <div class="d-flex justify-content-end align-items-center gap-2">
+      <%= simple_form_for @user, url: follow_unfollow_path(@user), html: { method: :post } do |f| %>
+        <%= f.button :submit, @is_following ? "Unfollow" : "Follow",
+          class: "btn btn-sm #{@is_following ? 'btn-outline-secondary' : 'btn-primary'} px-4 py-2",
+          style: "transition: background-color 0.2s;" %>
+      <% end %>
+
+      <%= simple_form_for @chat, url: chat_create_path, html: { method: :post } do |f| %>
+        <%= f.button :submit, "Message",
+            class: "btn btn-sm btn-outline-primary px-3 py-2",
+            style: "transition: background-color 0.2s;" %>
+        <%= f.input :user_id, as: :hidden, input_html: { value: @user.id }, wrapper: false %>
+      <% end %>
+    </div>
+  <% end %>
 </div>
