Made the the pattern card match the post one, besides the content. The content needs some work - patterns aren't really informative. Delete a bunch of redundant files after merging the cards

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,16 @@
+
+
 <div class="row mx-auto" style="width: 100vw;">
   <% if @post.pattern == false %>
     <%= render "posts/partials/show_post_card" %>
-  <% else  %>
-    <%= render 'patterns/partials/pattern_card', post: @post, user: @user %>
-    <%= render 'patterns/partials/pattern_content', post: @post, user: @user %>
+  <% else %>
+    <%= render "posts/partials/pattern_card" %>
   <% end %>
+  <%= turbo_frame_tag "comments" do %>
+    <%= render partial: "shared/comments", locals: { comments: @post.comments, post: @post } %>
+  <% end %>
+</div>
 
-<%= turbo_frame_tag "comments" do %>
-  <%= render partial: "shared/comments", locals: { comments: @post.comments, post: @post } %>
-<% end %>
 
 <% if @post.pattern == false %>
   <% content_for :meta_title, "#{@post.title} is on #{DEFAULT_META["meta_product_name"]}" %>
@@ -19,5 +21,3 @@
   <% content_for :meta_description, @post.content %>
   <% content_for :meta_image, cl_image_path(@post.image.key) %>
 <% end %>
-</div>
-
