Resized image and fixed bugs on patterns page

--- a/app/views/posts/patterns.html.erb
+++ b/app/views/posts/patterns.html.erb
@@ -14,6 +14,6 @@
 
 <% @patterns.each do |post| %>
   <%= link_to post_path(post) do %>
-    <%= render 'patterns/partials/pattern_card', post: post, user: @user %>
+    <%= render 'posts/partials/pattern_card', post: post %>
   <% end %>
 <% end %>
