--- a/app/views/post_likes/toggle.turbo_stream.erb
+++ b/app/views/post_likes/toggle.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.replace "post-#{@post.id}-likes" do %>
-  <div id="post-<%= @post.id %>-likes" class="d-flex align-items-center p-2 bd-highlight">
+  <div id="post-<%= @post.id %>-likes" class="d-flex justify-content-between align-items-center position-absolute" style="font-size: 0.9rem; bottom: -5px; right: 0px;">
     <% if @post.post_likes.where(user: current_user).exists? %>
       <%= link_to '', toggle_post_post_likes_path(@post),
             data: { turbo_method: 'post' },
