--- a/app/views/posts/partials/_show_pattern_card.html.erb
+++ b/app/views/posts/partials/_show_pattern_card.html.erb
@@ -5,6 +5,7 @@
         <%= render 'posts/partials/show_post_image', post: post %>
         <div class="card-body">
           <%= render 'posts/partials/show_post_header', post: post %>
+          <%= render 'posts/partials/pattern_content', post: post %>
           <%= render 'posts/partials/show_post_footer', post: post%>
         </div>
       </div>
