--- a/app/views/posts/patterns.html.erb
+++ b/app/views/posts/patterns.html.erb
@@ -1,4 +1,4 @@
-<h1>All Patterns</h1>
+<h1 class="d-flex justify-content-center align-items-center m-0">All Patterns</h1>
 <div class="row justify-content-center mx-auto" style="width: 100vw;">
   <div class="col-sm-8 my-3">
     <%= form_with url: trend_patterns_path , method: :get, class: "d-flex" do %>
