--- a/app/views/posts/partials/_post_header.html.erb
+++ b/app/views/posts/partials/_post_header.html.erb
@@ -43,7 +43,7 @@
   </div>
 
   <div>
-    <h4 class="card-title text-nowrap text-start mb-0" style="font-size: 1.2rem; font-weight: bold; color: #444; width: 300px; overflow: hidden;">
+    <h4 class="card-title text-nowrap text-start mb-0" style="font-size: 1.2rem; font-weight: 450; color: #000; width: 300px; overflow: hidden;">
       <%= post.title %>
     </h4>
     <h5 class="font-bold text-start" style="font-size: 1.1rem;">
