--- a/app/views/posts/partials/_post_image.html.erb
+++ b/app/views/posts/partials/_post_image.html.erb
@@ -4,9 +4,7 @@
         class: "card-img-top",
         style: "object-fit: cover; height: 200px; width: 100%; border-bottom: 3px solid #f1f1f1; border-top-left-radius: 1rem; border-top-right-radius: 1rem;" %>
     <% if post.pattern? %>
-      <div class="image-icon bg-white">Pattern</div>
-    <% else %>
-      <div class="image-icon bg-white">Post</div>
+<div class="image-icon bg-primary text-white">Pattern</div>
     <% end %>
   <% end %>
 </div>
