Did the same for my profile card:

--- a/app/views/users/partials/_my_profile_content.html.erb
+++ b/app/views/users/partials/_my_profile_content.html.erb
@@ -1,6 +1,6 @@
 <div class="post-content">
   <h4 class="card-title text-start"
-      style="font-size: 1.1rem; font-weight: bold; color: #444; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+      style="font-size: 1.1rem; font-weight: 450; color: #000; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
     <%= post.title %>
   </h4>
   <p class="card-text text-muted text-start my-2"
