finished the seeds

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container p-4">
   <div class="row">
     <div class="col-12">
-      <h2>Notifications</h2>
+      <h2 style="text-align: center; font-weight: bold;">Notifications</h2>
       <div id="notifications" class="mt-4">
         <% @notifications.each do |notification|%>
           <%= render "notification", notification: notification %>
