--- a/app/views/posts/partials/_navbar_top_index.html.erb
+++ b/app/views/posts/partials/_navbar_top_index.html.erb
@@ -1,12 +1,11 @@
 <nav class="navbar navbar-expand-lg sticky-top mb-3 shadow-sm container-fluid" id="navbar-top">
   <div class="container">
   <%= link_to root_path, class: "navbar-brand d-flex align-items-center" do %>
-    <% if controller_name == "posts" && action_name == "index" %>
-      <%= image_tag "yarnlore.png", alt: "Logo Text", height: 40, class: "mx-2" %>
-    <% else %>
       <%= image_tag "knitting.png", alt: "Logo", height: 30, class: "mx-2" %>
-    <% end %>
   <% end %>
+      <% if content_for?(:navbar_title) %>
+      <h1 class="navbar-title mt-2 mx-auto"><%= yield(:navbar_title) %></h1>
+    <% end %>
     <div class="ms-auto d-flex align-items-center">
       <% if user_signed_in? %>
         <%= link_to notifications_path, class: "nav-link" do %>
