Views for pattern content set to pre to display content in seeds file as is written (inline)

--- a/app/views/posts/partials/_pattern_content.html.erb
+++ b/app/views/posts/partials/_pattern_content.html.erb
@@ -1,7 +1,9 @@
 <div class="mb-4">
   <h5 class="mb-2">Instructions</h5>
 <p class="fs-6 text-dark overflow-auto" style="max-height: 200px;">
-  <%= post.content %>
+  <pre>
+  <%= post.content  %>
+  </pre>
 </p>
 
   <h5 class="mt-4 mb-2">Details</h5>
