changed banner for landing page

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:navbar_title, "Favourites") %>
 <% @favorites.each do |favorite| %>
   <div id="favorite-post-<%= favorite.post.id %>">
     <%= render "posts/partials/post_card", post: favorite.post, favorite: true %>
