--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:navbar_title, "Feed") %>
 <div class="row mx-auto" style="width: 100vw;">
   <% @posts.each do |post| %>
     <div class="col-sm-3 mx-0">
