--- a/app/assets/stylesheets/pages/_messages.scss
+++ b/app/assets/stylesheets/pages/_messages.scss
@@ -280,7 +280,7 @@ a.add img {
   height: 0;
   border-style: solid;
   border-width: 0 12px 15px 12px;
-  border-color: transparent transparent #4b7bec transparent;
+  border-color: transparent transparent $primary transparent;
   -webkit-transform: rotate(37deg);
   -ms-transform: rotate(37deg);
   transform: rotate(37deg);
@@ -292,7 +292,7 @@ a.add img {
   line-height: 1.5;
   font-weight: 400;
   padding: 15px;
-  background: #4b7bec;
+  background: $primary;
   display: inline-block;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
