--- a/app/views/posts/partials/_post_card.html.erb
+++ b/app/views/posts/partials/_post_card.html.erb
@@ -1,5 +1,7 @@
 <div class="card mx-auto rounded-top" style="width: 22.5rem; border: none;">
-  <%= render 'posts/partials/post_image', post: post %>
+  <a href="<%= post_path(post) %>" style="text-decoration: none; color: inherit;">
+    <%= render 'posts/partials/post_image', post: post %>
+  </a>
   <div class="card-body text-center shadow mb-3 bg-body rounded-3">
     <%= render 'posts/partials/post_header', post: post %>
   </div>
