--- a/app/views/posts/partials/_new_edit_post_form.html.erb
+++ b/app/views/posts/partials/_new_edit_post_form.html.erb
@@ -1,4 +1,4 @@
-<% provide(:navbar_title, "Show off your creation!") %>
+<% provide(:navbar_title, "Post Your Work") %>
 <div class="container p-4">
   <div class="row mt-4 mb-5">
     <div class="col-12">
