--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:navbar_title, "Feed") %>
 <div class="row mx-auto" style="width: 100vw;">
-  <% @posts.each do |post| %>
+  <% @all_posts.each do |post| %>
     <div class="col-sm-3 mx-0">
       <a href="<%= post_path(post) %>" style="text-decoration: none; color: inherit;">
         <%= render 'posts/partials/post_card', post: post, current_user: current_user %>
