user sign in fixed and you can access the website not signed in

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
         <i class="fas fa-house" style="color: #ffffff"></i>
       <% end %>
     <% end %>
-    <% if user_signed_in? %>
+    <%# <% if user_signed_in? %>
         <%= link_to trend_patterns_path || "#", class: "nav-link" do %>
           <% if controller_name == "posts" && action_name == "patterns" %>
             <i class="fas fa-search" style="color: #392F5A"></i>
@@ -35,20 +35,19 @@
           <% else %>
             <i class="fas fa-user" style="color: #ffffff"></i>
           <% end %>
-        <% end %>
-    <% else %>
-        <%= link_to new_user_session_path  || "#",  class: "nav-link" do %>
-          <i class="fas fa-search" style="color: #ffffff"></i>
-        <% end %>
-        <%= link_to new_user_session_path || "#",  class: "nav-link" do %>
-          <i class="fas fa-plus" style="color: #ffffff"></i>
-        <% end %>
-        <%= link_to new_user_session_path || "#",  class: "nav-link" do %>
-          <i class="fas fa-bell" style="color: #ffffff"></i>
-        <% end %>
-        <%= link_to new_user_session_path || "#",  class: "nav-link" do %>
-          <i class="fas fa-user" style="color: #ffffff"></i>
-        <% end %>
+    <%# <% else %>
+        <%# <%= link_to new_user_session_path  || "#",  class: "nav-link" do %>
+          <%# <i class="fas fa-search" style="color: #ffffff"></i> %>
+        <%# <% end %>
+        <%# <%= link_to new_user_session_path || "#",  class: "nav-link" do %>
+          <%# <i class="fas fa-plus" style="color: #ffffff"></i> %>
+        <%# <% end %>
+        <%# <%= link_to new_user_session_path || "#",  class: "nav-link" do %>
+          <%# <i class="fas fa-bell" style="color: #ffffff"></i> %>
+        <%# <% end %>
+        <%# <%= link_to new_user_session_path || "#",  class: "nav-link" do %>
+          <%# <i class="fas fa-user" style="color: #ffffff"></i> %>
+        <%# <% end %>
     <% end %>
   </div>
 </nav>
